# lektor-algolia

./: LICENSE.txt  Makefile  pyproject.toml  setup.cfg  setup.py
src/: lektor_algolia.py
