[tool.poetry]
name = "lektor-algolia"
version = "0.1.0"
description = "Lektor plugin to support generating an Algolia search index from your data"
license = "MIT"
homepage = "https://github.com/sherbondy/lektor-algolia"
authors = ["Ethan Sherbondy <sherbondye@gmail.com>"]

packages = [{ include = "*", from = "src" }]


[tool.poetry.dependencies]
python = "^3.7"

lektor = "*"
algoliasearch = "*"
devtools = "*"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
isort = "*"
flake8 = "^3.8.4"
pydocstyle = "^5.1.1"
